--- a/To-Do-List/app/templates/index.html
+++ b/To-Do-List/app/templates/index.html
@@ -7,6 +7,7 @@
 
 </head>
 <body>
+<div class="container">
 	<h1>Todo List</h1>
 	<div>Add a new todo item:
 		<form action="{{ url_for('add') }}" method="POST">
@@ -18,7 +19,7 @@
 		<h2>Incomplete Items</h2>
 		<ul>
 			{% for todo in incomplete %}
-			<li style="font-size: 30pt" class='mark'>{{ todo.text }} <a href="{{ url_for('complete', id=todo.id) }}">Mark As Complete</a></li>
+			<li style="font-size: 20pt" class='mark'>{{ todo.text }} <a href="{{ url_for('complete', id=todo.id) }}">Mark As Complete</a></li>
 			{% endfor %}
 		</ul>
 		<h2>Completed Items</h2>
@@ -27,6 +28,7 @@
 			<li style="font-size: 30pt">{{ todo.text }}</li>
 			{% endfor %}
 		</ul>
+	</div>
 	</div>
 </body>
 </html>
